--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:postgresql://[IP-adress]:[PORT]/[DBName]
 spring.datasource.username=username
 spring.datasource.password=password
 spring.jpa.generate-ddl=true
+spring.datasource.hikari.maximum-pool-size=5
 logging.file=logs/spring-boot-logging.log
+logging.level.org.hibernate=DEBUG
